crates/pg_syntax/tests/snapshots/postgres_regress/rangefuncs@192.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT * FROM (VALUES (11,12),(13,15),(16,20)) v(r1,r2), rngfunc_sql(r1,r2);"
---
SelectStmt@0..76
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  Ascii40@14..15 "("
  RangeSubselect@15..54
    SelectStmt@15..44
      Values@15..21 "VALUES"
      Whitespace@21..22 " "
      Ascii40@22..23 "("
      List@23..28
        AConst@23..25
          Iconst@23..25 "11"
        Ascii44@25..26 ","
        AConst@26..28
          Iconst@26..28 "12"
      Ascii41@28..29 ")"
      Ascii44@29..30 ","
      Ascii40@30..31 "("
      List@31..36
        AConst@31..33
          Iconst@31..33 "13"
        Ascii44@33..34 ","
        AConst@34..36
          Iconst@34..36 "15"
      Ascii41@36..37 ")"
      Ascii44@37..38 ","
      Ascii40@38..39 "("
      List@39..44
        AConst@39..41
          Iconst@39..41 "16"
        Ascii44@41..42 ","
        AConst@42..44
          Iconst@42..44 "20"
    Ascii41@44..45 ")"
    Ascii41@45..46 ")"
    Whitespace@46..47 " "
    Alias@47..54
      Ident@47..48 "v"
      Ascii40@48..49 "("
      Ident@49..51 "r1"
      Ascii44@51..52 ","
      Ident@52..54 "r2"
  Ascii41@54..55 ")"
  Ascii44@55..56 ","
  Whitespace@56..57 " "
  RangeFunction@57..74
    List@57..74
      FuncCall@57..74
        Ident@57..68 "rngfunc_sql"
        Ascii40@68..69 "("
        ColumnRef@69..71
          Ident@69..71 "r1"
        Ascii44@71..72 ","
        ColumnRef@72..74
          Ident@72..74 "r2"
  Ascii41@74..75 ")"
  Ascii59@75..76 ";"

