crates/pg_syntax/tests/snapshots/postgres_regress/rangefuncs@21.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select definition from pg_views where viewname='vw_ord';"
---
SelectStmt@0..56
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..17
    ColumnRef@7..17
      Ident@7..17 "definition"
  Whitespace@17..18 " "
  From@18..22 "from"
  Whitespace@22..23 " "
  RangeVar@23..31
    Ident@23..31 "pg_views"
  Whitespace@31..32 " "
  Where@32..37 "where"
  Whitespace@37..38 " "
  AExpr@38..55
    ColumnRef@38..46
      Ident@38..46 "viewname"
    Ascii61@46..47 "="
    AConst@47..55
      Sconst@47..55 "'vw_ord'"
  Ascii59@55..56 ";"

