crates/pg_syntax/tests/snapshots/postgres_regress/rangefuncs@217.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT * FROM (VALUES (1),(2),(3)) v(r), unnest(array[r*10,r*20,r*30]) f(i);"
---
SelectStmt@0..76
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  Ascii40@14..15 "("
  RangeSubselect@15..38
    SelectStmt@15..32
      Values@15..21 "VALUES"
      Whitespace@21..22 " "
      Ascii40@22..23 "("
      List@23..24
        AConst@23..24
          Iconst@23..24 "1"
      Ascii41@24..25 ")"
      Ascii44@25..26 ","
      Ascii40@26..27 "("
      List@27..28
        AConst@27..28
          Iconst@27..28 "2"
      Ascii41@28..29 ")"
      Ascii44@29..30 ","
      Ascii40@30..31 "("
      List@31..32
        AConst@31..32
          Iconst@31..32 "3"
    Ascii41@32..33 ")"
    Ascii41@33..34 ")"
    Whitespace@34..35 " "
    Alias@35..38
      Ident@35..36 "v"
      Ascii40@36..37 "("
      Ident@37..38 "r"
  Ascii41@38..39 ")"
  Ascii44@39..40 ","
  Whitespace@40..41 " "
  RangeFunction@41..74
    List@41..68
      FuncCall@41..68
        Ident@41..47 "unnest"
        Ascii40@47..48 "("
        AArrayExpr@48..68
          Array@48..53 "array"
          Ascii91@53..54 "["
          AExpr@54..58
            ColumnRef@54..55
              Ident@54..55 "r"
            Ascii42@55..56 "*"
            AConst@56..58
              Iconst@56..58 "10"
          Ascii44@58..59 ","
          AExpr@59..63
            ColumnRef@59..60
              Ident@59..60 "r"
            Ascii42@60..61 "*"
            AConst@61..63
              Iconst@61..63 "20"
          Ascii44@63..64 ","
          AExpr@64..68
            ColumnRef@64..65
              Ident@64..65 "r"
            Ascii42@65..66 "*"
            AConst@66..68
              Iconst@66..68 "30"
    Ascii93@68..69 "]"
    Ascii41@69..70 ")"
    Whitespace@70..71 " "
    Alias@71..74
      Ident@71..72 "f"
      Ascii40@72..73 "("
      Ident@73..74 "i"
  Ascii41@74..75 ")"
  Ascii59@75..76 ";"

