crates/pg_syntax/tests/snapshots/postgres_regress/rangefuncs@230.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT * FROM rngfunc(42);
---
SelectStmt@0..26
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeFunction@14..24
    List@14..24
      FuncCall@14..24
        Ident@14..21 "rngfunc"
        Ascii40@21..22 "("
        AConst@22..24
          Iconst@22..24 "42"
  Ascii41@24..25 ")"
  Ascii59@25..26 ";"

